2011-11-09  Simon Hausmann  <simon.hausmann@nokia.com>

        Unreviewed, rolling out r99701.
        http://trac.webkit.org/changeset/99701

        Breaks Qt mac build

        * Api/qwebpage.cpp:
        (initResources):
        (QWebPagePrivate::QWebPagePrivate):

2011-11-09  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Enable exports and constructor functions in static libs

        Reviewed by Tor Arne Vestbø.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::QWebPagePrivate): Remove unnecessary manual Qt resource
        initialization.

2011-11-09  Deepak Sherveghar  <bpwv64@motorola.com>

        [Qt] 4 Layout test fail due to network error constant values clash with WebkitError enum values in FrameloaderclientQt
        https://bugs.webkit.org/show_bug.cgi?id=71554

        Reviewed by Simon Hausmann.

        We should check the error domain when checking the error code in shouldFallBack()

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::shouldFallBack): added error domain check

2011-11-08  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Replace use of QApplication with QGuiApplication
        https://bugs.webkit.org/show_bug.cgi?id=71794

        Reviewed by Andreas Kling.

        * WebCoreSupport/QtWebComboBox.cpp:
        (WebCore::QtWebComboBox::showPopupAtCursorPosition): Replace use of QApplication
        with QCoreApplication.

2011-11-07  Adam Barth  <abarth@webkit.org>

        Move static "policy" state from SecurityOrigin.cpp to SecurityPolicy.cpp
        https://bugs.webkit.org/show_bug.cgi?id=71755

        Reviewed by Eric Seidel.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::QWebPagePrivate):
        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::whiteListAccessFromOrigin):
        (DumpRenderTreeSupportQt::removeWhiteListAccessFromOrigin):
        (DumpRenderTreeSupportQt::resetOriginAccessWhiteLists):
