@@ -1,3 +1,13 @@
+2011-11-09  Simon Hausmann  <simon.hausmann@nokia.com>
+
+        [Qt] Enable exports and constructor functions in static libs
+
+        Reviewed by Tor Arne Vestbø.
+
+        * WebProcess/WebPage/qt/WebPageQt.cpp:
+        (WebKit::WebPage::platformInitialize): Remove unnecessary manual Qt resource
+        initialization.
+
 2011-11-10  Zeno Albisser  <zeno.albisser@nokia.com>
 
         [Qt][WK2] Add Tap Gesture recognition to UIProcess
